# hyperion

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  go.mod  pyproject.toml
hyperion-py/: .pylintrc  Makefile  README.md  TODO.md  pyproject.toml
hyperion-py/resources/: tickers.txt
hyperion-py/src/: main.py  ticker_body.json  train.py
hyperion-py/src/align/: __init__.py  align.py
hyperion-py/src/console/: __init__.py  console.py
hyperion-py/src/data/: __init__.py  stock_data_downloader.py
hyperion-py/src/experimental/: __init__.py  walk_foward_validation.py
hyperion-py/src/feature/: __init__.py  feature_engineering.py  feature_split.py  technical_indicators.py
hyperion-py/src/headlines/: gdeltdoc_test.py  marketwatch.py  pull_articles.py
hyperion-py/src/historic_data/: AAPL_10y_1d.csv  AAPL_1y_1d.csv  AAPL_1y_1h.csv  AAPL_5y_1d.csv  AMZN_10y_1d.csv  BABB_10y_1d.csv  BABB_1y_1h.csv  BDTX_10y_1d.csv  BDTX_1y_1d.csv  BDTX_1y_1h.csv  BZUN_10y_1d.csv  BZUN_1y_1d.csv  BZUN_1y_1h.csv  CYH_10y_1d.csv  CYH_1y_1d.csv  CYH_1y_1h.csv  DAO_10y_1d.csv  DAO_1y_1d.csv  DAO_1y_1h.csv  DDL_10y_1d.csv  DDL_1y_1d.csv  DDL_1y_1h.csv  DELL_10y_1d.csv  EXC_10y_1d.csv  GEVO_10y_1d.csv  GEVO_1y_1d.csv  GEVO_1y_1h.csv  GOOG_10y_1d.csv  IH_10y_1d.csv  IH_1y_1d.csv  IH_1y_1h.csv  KC_10y_1d.csv  KC_1y_1d.csv  KC_1y_1h.csv  META_10y_1d.csv  MSFT_10y_1d.csv  NFLX_10y_1d.csv  NPWR_10y_1d.csv  NPWR_1y_1d.csv  NPWR_1y_1h.csv  (+29 more)
hyperion-py/src/invalid_models/: BDTX_xgboost_model.pkl  CYH_xgboost_model.pkl  DAO_xgboost_model.pkl  DDL_xgboost_model.pkl  GEVO_xgboost_model.pkl  IH_xgboost_model.pkl  KC_xgboost_model.pkl  QD_xgboost_model.pkl  RERE_xgboost_model.pkl  SCWO_xgboost_model.pkl  SVRA_xgboost_model.pkl  UXIN_xgboost_model.pkl  WDH_xgboost_model.pkl
hyperion-py/src/lgb/: lgb_predictor.py
hyperion-py/src/model/: __init__.py  model.py
hyperion-py/src/models/: AAPL_xgboost_model.pkl  CYH_xgboost_model.pkl  GEVO_xgboost_model.pkl  IH_xgboost_model.pkl  KC_xgboost_model.pkl  NPWR_xgboost_model.pkl  SCWO_xgboost_model.pkl  TBLA_xgboost_model.pkl
hyperion-py/src/optimise/: __init__.py  optimizer.py
hyperion-py/src/pipeline/: __init__.py  base_pipeline.py  pipeline.py  single_pipeline.py  stacked_pipeline.py  time_series_stacked_pipeline.py
hyperion-py/src/ranking/: __init__.py  ranker.py
hyperion-py/src/results/: AAPL_latest_prediction.txt  AAPL_results.txt  BABB_results.txt  BDTX_results.txt  BZUN_results.txt  CYH_results.txt  DAO_results.txt  DDL_results.txt  GEVO_results.txt  IH_results.txt  KC_results.txt  NPWR_results.txt  QD_results.txt  RERE_results.txt  SCWO_results.txt  SVRA_results.txt  TBLA_results.txt  TBTC_results.txt  UXIN_results.txt  VFF_results.txt  WDH_results.txt
hyperion-py/src/server/: __init__.py  server.py
hyperion-py/src/simulation/: README.md  __init__.py  predict.py  trading_simulation.py  trading_simulator.py  types.py
hyperion-py/src/stacker/: __init__.py  stack.py
hyperion-py/src/writer/: __init__.py  (+2 more)
hyperion-py/tests/: test_feature_engineering.py  test_feature_split.py  test_model_base.py  test_technical_indicators.py  test_trading_simulator.py
(+194 files in other folders)
