[project]
name = "hyperion-py"
version = "0.1.0"
description = "Predict stocks with xgboost"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "yfinance==0.2.66",
    "xgboost==2.0.3",
    "pandas==2.1.4",
    "numpy==1.26.2",
    "matplotlib==3.8.2",
    "scikit-learn==1.5.0",
    "seaborn==0.13.0",
    "flask==3.1.3",
    "lightgbm==4.6.0",
    "optuna==4.6.0",
    "plotly==6.4.0",
    "catboost==1.2.8",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]
markers = [
    "regression: marks tests as regression tests (may be slower)",
]

[tool.ty]
# https://docs.astral.sh/ty/
# Using default configuration

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
