[tool.poetry]
name = "hyperion-py"
version = "0.1.0"
description = "Predict stocks with xgboost"
authors = []
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
yfinance = "0.2.66"
xgboost = "2.0.3"
pandas = "2.1.4"
numpy = "1.26.2"
matplotlib = "3.8.2"
scikit-learn = "1.3.2"
seaborn = "0.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"